# autoware_multi_object_tracker

./: .devcontainer  .gitattributes  .gitmodules  .pre-commit-config.yaml  .repos  .vscode  README.md  config.rviz  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: compose-oci.yml  consistency.yml  docker-ros.yml  docs.yml
autoware_multi_object_tracker/: CMakeLists.txt  README.md  package.xml
autoware_multi_object_tracker/config/: data_association_matrix.param.yaml  input_channels.param.yaml  multi_object_tracker_node.param.yaml
autoware_multi_object_tracker/design/: MultiObjectTracker.node.yaml
autoware_multi_object_tracker/include/autoware/multi_object_tracker/: configurations.hpp  odometry.hpp  types.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/association/: association_base.hpp  polar_association.hpp  tracker_overlap_manager.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/association/scoring/: redundancy_check.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/object_model/: object_model.hpp  shapes_iou.hpp  shapes_transform.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/tracker/: tracker.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/tracker/motion_model/: bicycle_motion_model.hpp  ctrv_motion_model.hpp  motion_model_base.hpp  static_motion_model.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/tracker/shape_model/: pedestrian_shape_model.hpp  polygon_shape_model.hpp  shape_model_base.hpp  static_shape_model.hpp  vehicle_shape_model.hpp
autoware_multi_object_tracker/include/autoware/multi_object_tracker/tracker/trackers/: multiple_vehicle_tracker.hpp  pedestrian_and_bicycle_tracker.hpp  pedestrian_tracker.hpp  (+4 more)
autoware_multi_object_tracker/launch/: autoware_multi_object_tracker.launch.py  multi_object_tracker.launch.py  multi_object_tracker.launch.xml
autoware_multi_object_tracker/lib/: odometry.cpp  types.cpp
autoware_multi_object_tracker/lib/association/: tracker_overlap_manager.cpp
autoware_multi_object_tracker/lib/association/scoring/: bev_assignment_scoring.cpp  polar_assignment_scoring.cpp  redundancy_check.cpp
autoware_multi_object_tracker/lib/object_model/: shapes_iou.cpp  shapes_transform.cpp
autoware_multi_object_tracker/lib/tracker/motion_model/: bicycle_motion_model.cpp  ctrv_motion_model.cpp  cv_motion_model.cpp  static_motion_model.cpp
autoware_multi_object_tracker/lib/tracker/shape_model/: pedestrian_shape_model.cpp  polygon_shape_model.cpp  shape_model_base.cpp  static_shape_model.cpp  unstable_shape_filter.cpp  vehicle_shape_model.cpp
autoware_multi_object_tracker/lib/tracker/trackers/: multiple_vehicle_tracker.cpp  pedestrian_and_bicycle_tracker.cpp  pedestrian_tracker.cpp  polygon_tracker.cpp  static_tracker.cpp  tracker_base.cpp  vehicle_tracker.cpp
autoware_multi_object_tracker/lib/tracker/update/: vehicle_update_strategy.cpp
autoware_multi_object_tracker/schema/: data_association_matrix.schema.json  input_channels.schema.json  multi_object_tracker_node.schema.json
autoware_multi_object_tracker/src/: multi_object_tracker_core.cpp  multi_object_tracker_core.hpp  multi_object_tracker_node.cpp  multi_object_tracker_node.hpp
autoware_multi_object_tracker/src/debugger/: debug_object.hpp  debugger.cpp  debugger.hpp
autoware_multi_object_tracker/src/processor/: input_manager.cpp  input_manager.hpp  processor.cpp  processor.hpp
autoware_multi_object_tracker/test/: test_bench.cpp  test_bench.hpp  test_multi_object_tracker.cpp  test_tracker_overlap_manager.cpp  test_utils.cpp  test_utils.hpp  test_vehicle_tracker.cpp
autoware_multi_object_tracker/test/data/test_data1/: test_data1.db3
docker/compose/: docker-compose.yml
docs/: IMPLEMENTATION.md
openads_demo_module/: CMakeLists.txt  README.md  package.xml
openads_demo_module/config/: params.yml
openads_demo_module/include/openads_demo_module/: openads_demo_module.hpp
openads_demo_module/launch/: openads_demo_module_launch.py
openads_demo_module/src/: openads_demo_module.cpp
openads_demo_module_interfaces/: CMakeLists.txt  README.md  package.xml
(+1 files in other folders)
